2007-05-25  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpsessioninfoaux.[ch]
	* app/widgets/gimpsessioninfobook.[ch]
	* app/widgets/gimpsessioninfodock.[ch]
	* app/widgets/gimpsessioninfodockable.[ch]: renamed these...

	* app/widgets/gimpsessioninfo-aux.[ch]
	* app/widgets/gimpsessioninfo-book.[ch]
	* app/widgets/gimpsessioninfo-dock.[ch]
	* app/widgets/gimpsessioninfo-dockable.[ch]: ...to these.

	* app/widgets/Makefile.am
	* app/widgets/gimpcoloreditor.c
	* app/widgets/gimpcursorview.c
	* app/widgets/gimpdataeditor.c
	* app/widgets/gimpdocked.c
	* app/widgets/gimphistogrameditor.c
	* app/widgets/gimpmenudock.c
	* app/widgets/gimppaletteeditor.c
	* app/widgets/gimpsessioninfo.c: changed accordingly.

2007-05-25  Sven Neumann  <sven@gimp.org>

	* libgimpbase/gimpparasite.c: allocate parasites using GSlice.

2007-05-25  Sven Neumann  <sven@gimp.org>

	* gimptool-2.0.in: require pkg-config and use it to determine
	cflags and libs.

	* docs/gimptool.1.in: document that pkg-config is used and
	recommend to use pkg-config directly.

2007-05-25  Sven Neumann  <sven@gimp.org>

	* gimptool-2.0.in: synced --libs output with the pkg-config files.

2007-05-25  Sven Neumann  <sven@gimp.org>

	* plug-ins/imagemap/imap_main.c
	* plug-ins/imagemap/imap_object.[ch]: applied patch from Kevin
	Hurewitz that adds keyboard control for resizing an area (bug #439226).

2007-05-24  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-display.c (pygimp_display_new): return None
	if we're passed an ID of -1, like the other GIMP object constructors.

2007-05-24  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-display.c: remove the delete method, PyGimp
	objects are supposed to be deleted via gimp.delete()

2007-05-24  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpsessioninfo.[ch]
	* app/widgets/gimpsessioninfoaux.[ch]
	* app/widgets/gimpsessioninfobook.[ch]
	* app/widgets/gimpsessioninfodock.c
	* app/widgets/gimpsessioninfodockable.[ch]: cleanup.
